--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 .text-area {
     background: none;
-    border: none;
+    /*border: none;*/
     outline: none;
     color: inherit;
     width: 100%;
